# can-telemetry-forge

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: fleet.json
docs/: ARCHITECTURE.md  DATA_DESIGN.md  DATA_DICTIONARY.md  DECISIONS.md  ROADMAP.md  STATE.md
src/can_telemetry_forge/: __init__.py  cli.py  config.py
src/can_telemetry_forge/anomalies/: __init__.py  frame_faults.py  inject.py  injectors.py  outliers.py  spec.py
src/can_telemetry_forge/io/: __init__.py  writers.py
src/can_telemetry_forge/labels/: __init__.py  failure.py
src/can_telemetry_forge/signals/: __init__.py  eras.py  frames.py  generators.py  spec.py
src/can_telemetry_forge/sim/: __init__.py  drivers.py  fleet.py  simulate.py
tests/: test_anomalies.py  test_cli.py  test_config.py  test_diversity.py  test_frames.py  test_signals.py  test_simulate.py  test_validation.py  test_writers.py
validation/: __init__.py  compare.py  reference.py  report.py
