[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "can-telemetry-forge"
version = "0.1.0"
description = "Synthetic heavy-equipment CAN Bus telemetry generator (SAE J1939 + physics) for predictive-maintenance datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jorge Ribeiro" }]
keywords = [
    "synthetic-data",
    "telemetry",
    "can-bus",
    "j1939",
    "predictive-maintenance",
    "data-generation",
    "fleet",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
    "duckdb>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Validation-only — distribution checks against a license-checked public dataset
# (ROADMAP F4 / ADR-017). Kept out of the core runtime deps so the library + CI
# stay lean. ``kaggle`` is only needed for the opt-in ``--dataset ved`` fetch;
# the offline adapters (in_spec, golden) need nothing beyond the core.
validate = ["kaggle>=1.6", "matplotlib>=3.7"]

[project.scripts]
forge = "can_telemetry_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# "src" for the installable package; "." so the opt-in ``validation/`` package
# (deliberately outside src/ — the core never imports it) is importable in tests.
pythonpath = ["src", "."]
testpaths = ["tests"]
